@@ -96,6 +96,7 @@ Compiler_Features_19_Test
 Compiler_Features_21_Test
 Compiler_Features_23_Test
 Compiler_Features_24_Test
+Compiler_Features_25_Test
 Config_Test: !LynxOS !VxWorks !ACE_FOR_TAO
 Conn_Test: !ACE_FOR_TAO
 DLL_Test: !STATIC Linux
